--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -108,4 +108,57 @@
     flex-direction: row;
 }
 
-
+.screen{
+    display: flex;
+    flex-direction: row;
+}
+.stocklist{
+    width: 50vw;
+    height: auto;
+    border: 2px solid black;
+}
+.portfolio{
+    width: 50vw;
+    height: auto;
+    border: 2px solid black;
+}
+.list{
+    display: flex;
+    flex-direction: column;
+}
+.ele{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
+.content1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    width: 170px;
+    border: 2px solid rgb(224, 255, 255);
+    text-align: center;
+    
+    padding: 5px;
+}
+.content1{
+    font-size: 17px;
+    font-family: Roboto,system-ui;
+    color: var(--text130);
+    letter-spacing: .3px;
+    font-weight: 350;
+    -webkit-font-smoothing: auto;
+    margin: 0;
+}
+.heading{
+    text-align: center;
+    font-size: 40px;
+    font-family: Roboto,system-ui;
+    color: var(--text130);
+    letter-spacing: .3px;
+    font-weight: 300;
+    -webkit-font-smoothing: auto;
+    margin-bottom: 30px;
+}
